[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scenes/world/WorldScene2D.gd" id="1_forest"]
[ext_resource type="PackedScene" path="res://actors/player/Player.tscn" id="2_player"]
[ext_resource type="Script" path="res://systems/interact/BuildingEntrance.gd" id="3_entrance"]
[ext_resource type="Texture2D" path="res://assets/sprites/props_sheet.png" id="4_props"]
[ext_resource type="PackedScene" path="res://actors/enemies/ContinuityEnforcer.tscn" id="5_enforcer"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_boundary"]
size = Vector2(1600, 20)

[node name="WhisperingForest" type="Node2D"]
script = ExtResource("1_forest")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1600.0
offset_bottom = 1200.0
color = Color(0.05, 0.08, 0.05, 1)

[node name="ForestFloor" type="ColorRect" parent="."]
offset_right = 1600.0
offset_bottom = 1200.0
color = Color(0.1, 0.15, 0.1, 0.4)

[node name="Trees" type="Node2D" parent="."]

[node name="Tree1" type="ColorRect" parent="Trees"]
offset_left = 300.0
offset_top = 400.0
offset_right = 340.0
offset_bottom = 500.0
color = Color(0.2, 0.1, 0.05, 1)

[node name="Canopy" type="ColorRect" parent="Trees/Tree1"]
offset_left = -30.0
offset_top = -60.0
offset_right = 70.0
offset_bottom = 20.0
color = Color(0.1, 0.3, 0.1, 0.6)

[node name="Decor" type="Node2D" parent="."]

[node name="SignalRelay" type="Sprite2D" parent="Decor"]
position = Vector2(800, 400)
texture = ExtResource("4_props")
region_enabled = true
region_rect = Rect2(0, 0, 340, 280)

[node name="RedactedPillar" type="Sprite2D" parent="Decor"]
position = Vector2(1200, 800)
texture = ExtResource("4_props")
region_enabled = true
region_rect = Rect2(512, 512, 512, 512)

[node name="Mushrooms" type="Sprite2D" parent="Decor"]
position = Vector2(400, 900)
texture = ExtResource("4_props")
region_enabled = true
region_rect = Rect2(256, 512, 256, 512)

[node name="Enemies" type="Node2D" parent="."]

[node name="ContinuityEnforcer" parent="Enemies" instance=ExtResource("5_enforcer")]
position = Vector2(700, 600)

[node name="ContinuityEnforcer2" parent="Enemies" instance=ExtResource("5_enforcer")]
position = Vector2(1000, 300)

[node name="ExitToSanctuary" type="Area2D" parent="."]
position = Vector2(50, 600)
collision_layer = 2
collision_mask = 1
script = ExtResource("3_entrance")
interior_scene = "res://scenes/world/WorldScene2D.tscn"
entrance_id = "forest_west_exit"
prompt_text = "[E] Return to Sanctuary"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitToSanctuary"]
shape = SubResource("RectangleShape2D_boundary")
rotation = 1.5708
scale = Vector2(0.1, 0.1)

[node name="Visual" type="ColorRect" parent="ExitToSanctuary"]
offset_left = -20.0
offset_top = -50.0
offset_right = 0.0
offset_bottom = 50.0
color = Color(0.15, 0.1, 0.05, 1)

[node name="Label" type="Label" parent="ExitToSanctuary"]
offset_left = 10.0
offset_top = -10.0
offset_right = 130.0
offset_bottom = 10.0
theme_override_font_sizes/font_size = 10
text = "[E] Sanctuary"

[node name="Boundary" type="StaticBody2D" parent="."]

[node name="Top" type="CollisionShape2D" parent="Boundary"]
position = Vector2(800, -10)
shape = SubResource("RectangleShape2D_boundary")

[node name="Bottom" type="CollisionShape2D" parent="Boundary"]
position = Vector2(800, 1210)
shape = SubResource("RectangleShape2D_boundary")

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(100, 600)

[node name="UI" type="CanvasLayer" parent="."]

[node name="LogPanel" type="PanelContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -140.0
offset_right = 330.0
offset_bottom = -10.0
grow_vertical = 0

[node name="LogVBox" type="VBoxContainer" parent="UI/LogPanel"]
layout_mode = 2

[node name="LogTitleLabel" type="Label" parent="UI/LogPanel/LogVBox"]
layout_mode = 2
text = "Forest Log:"

[node name="LogTextLabel" type="Label" parent="UI/LogPanel/LogVBox"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
text = "The trees seem to lean toward you as you pass..."
autowrap_mode = 2

[node name="VisitCountLabel" type="Label" parent="UI/LogPanel/LogVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Apothecary: 0 | Archivist: 0 | Gatekeeper: 0"

[node name="PlayerInfoPanel" type="PanelContainer" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 220.0
offset_bottom = 100.0

[node name="InfoVBox" type="VBoxContainer" parent="UI/PlayerInfoPanel"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="UI/PlayerInfoPanel/InfoVBox"]
layout_mode = 2
text = "Name"

[node name="ArchetypeLabel" type="Label" parent="UI/PlayerInfoPanel/InfoVBox"]
layout_mode = 2
text = "Archetype"

[node name="VowLabel" type="Label" parent="UI/PlayerInfoPanel/InfoVBox"]
layout_mode = 2
text = "Vow"
